<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailed_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/detailed_article_view_elevation"
    android:clickable="true"
    android:background="@color/colorBackground">

...
        android:paddingTop="@dimen/detailed_article_view_padding_top"
        android:paddingBottom="@dimen/detailed_article_view_padding_bottom"
        android:paddingStart="@dimen/detailed_article_view_padding_horizontal"
        android:paddingEnd="@dimen/detailed_article_view_padding_horizontal">

        <ImageButton
            android:id="@+id/btn_cross"
            android:layout_width="@dimen/detailed_article_view_cross_button_length"
            android:layout_height="@dimen/detailed_article_view_cross_button_length"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/detailed_article_view_cross_button_margin"
            android:src="@drawable/ic_cross"
...
