...
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:clipToPadding="false"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_articles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fastScrollEnabled="true"

                android:scrollbars="vertical"
                android:paddingTop="@dimen/feed_view_padding_vertical"
...
